# vivid

./: .editorconfig  .gitignore  LICENSE  README.md  VIVID_V1_STREAMLINED_SPEC.md  package-lock.json  package.json
.github/workflows/: ci.yml  release-tauri.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
docs/: API_CONTRACT.md  ARTIFACT_HYGIENE.md  BUILD_TICKETS.md  GENERATION_RUNTIME.md  IMPLEMENTATION_STATUS.md  KNOWN_LIMITATIONS_AND_ROLLBACK.md  PRE_UPLOAD_CHECKLIST.md  QUEUE_STATE_MACHINE.md  QUICK_START.md  REFERENCE_PARITY_AUDIT.md  RELEASE_CANDIDATE_V1.md  RELEASE_GATES_V1.md  RELEASE_PUBLISH_RUNBOOK.md  SHIP_REVIEW_V1.md  SIDECAR_LIFECYCLE.md  TAURI_CAPABILITY_REVIEW.md
reference/: README.md
scripts/: bootstrap.ps1  bootstrap_release_signing.ps1  build_sidecar_binary.py  configure_tauri_release.mjs  dev.ps1  run_python.mjs
services/inference/: README.md  pyproject.toml
services/inference/tests/: conftest.py  test_api.py  test_db.py  test_engine.py  test_lifecycle_and_dependencies.py  test_model_manager.py  test_state.py
services/inference/vivid_inference/: __init__.py  config.py  db.py  deps.py  engine.py  errors.py  main.py  model_manager.py  prompting.py  schemas.py  sidecar_entry.py  state.py
services/inference/vivid_inference/data/: model_manifests.json  prompting_presets.json
services/inference/vivid_inference/routes/: __init__.py  e2e.py  jobs.py  models.py  projects.py  prompting.py  settings.py
(+28 files in other folders)
